load("@blackjack//:blackjack.bzl", "blackjack")
load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")

blackjack(
    name = "blackjack",
    manifest = "Cargo.toml",
)

rust_binary(
    name = "linked_repos_checker",
    srcs = ["src/main.rs"],
    edition = "2018",
    deps = [
        "@crates_io_serde_yaml//:serde_yaml",
        "@crates_io_serde//:serde",
    ],
    tags = [
        "local",
    ],
    visibility = ["//visibility:public"],
)

