load("@blackjack//:blackjack.bzl", "blackjack")
load("@rules_rust//rust:rust.bzl", "rust_binary")

blackjack(
    name = "blackjack",
    manifest = "Cargo.toml",
)

rust_binary(
    name = "linked_repos_checker",
    srcs = ["src/main.rs"],
    edition = "2018",
    tags = [
        "local",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates_io_serde//:serde",
        "@crates_io_serde_yaml//:serde_yaml",
    ],
)
